# crdt-demos

.github/workflows/: cmake-multi-platform.yml
client-cpp/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
client-cpp/licenses/github.com/nlohmann/json/: LICENSE.MIT
client-cpp/src/: CMakeLists.txt  error.h  main.cpp  message.h
client-cpp/src/data/: currency.h  date_times.h  monotonic_physical_timestamp.h  sample_data.h  timestamp.h  to_enum.h
client-cpp/src/functional/: expected.h  overloaded.h
client-cpp/src/networking/: connection.h  crdt.h  json_coder.h  pub_sub.h  types.h  vector_clocks.h
client-cpp/src/store/: store_categories.h  store_category.h  store_item.h
